[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperloop-perf-server"
version = "0.1.0"
description = "MCP server for querying Linux perf profiles from Hyperloop workflows"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
]

[project.scripts]
hyperloop-perf-server = "perf_mcp_server:main"

[tool.hatch.build.targets.wheel]
include = ["perf_mcp_server.py", "igprof_tools.py", "hl_common.py"]
