[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperloop-server"
version = "0.1.0"
description = "MCP server for monitoring AliHyperloop train runs"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
hyperloop-server = "hyperloop_server:main"

[tool.hatch.build.targets.wheel]
include = ["hyperloop_server.py"]
